fix winter swans not added

--- a/english-literature/poems/love-and-relationships/learn-folders/learn-love/plan_past_paper_question_2.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/learn-love/plan_past_paper_question_2.html
@@ -378,7 +378,7 @@
               >Plan Past Paper Question 1</a
             >
           </li>
-          <li style="margin-bottom: 10px">
+          <li class="ticklist">
             <a
               href="../../learn-folders/learn-love/plan_past_paper_question_2.html"
               >Plan Past Paper Question 2</a
@@ -447,6 +447,15 @@
             <li style="margin-bottom: 10px">
               <a href="../../learn-folders/neutral-tones/neutral_tones.html"
                 >Neutral Tones</a
+              >
+            </li>
+          </ul>
+          <div class="separator"></div>
+          <h3>Winter Swans</h3>
+          <ul>
+            <li style="margin-bottom: 10px">
+              <a href="../../learn-folders/neutral-tones/neutral_tones.html"
+                >Winter Swans</a
               >
             </li>
           </ul>
