--- a/english-literature/poems/love-and-relationships/learn-folders/letters-from-yorkshire/letters_from_yorkshire.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/letters-from-yorkshire/letters_from_yorkshire.html
@@ -451,6 +451,15 @@
             </li>
           </ul>
           <div class="separator"></div>
+          <h3>Winter Swans</h3>
+          <ul>
+            <li style="margin-bottom: 10px">
+              <a href="../../learn-folders/neutral-tones/neutral_tones.html"
+                >Winter Swans</a
+              >
+            </li>
+          </ul>
+          <div class="separator"></div>
           <h3>Singh Song</h3>
           <ul>
             <li style="margin-bottom: 10px">
@@ -547,7 +556,7 @@
           <div class="separator"></div>
           <h3>Letters From Yorkshire</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/letters-from-yorkshire/letters_from_yorkshire.html"
                 >Letters From Yorkshire</a
