--- a/english-literature/poems/love-and-relationships/learn-folders/learn-love/write_up_full_essay_1.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/learn-love/write_up_full_essay_1.html
@@ -384,7 +384,7 @@
               >Plan Past Paper Question 2</a
             >
           </li>
-          <li style="margin-bottom: 10px">
+          <li class="ticklist">
             <a href="../../learn-folders/learn-love/write_up_full_essay_1.html"
               >Write Up Full Essay 1</a
             >
@@ -447,6 +447,15 @@
             <li style="margin-bottom: 10px">
               <a href="../../learn-folders/neutral-tones/neutral_tones.html"
                 >Neutral Tones</a
+              >
+            </li>
+          </ul>
+          <div class="separator"></div>
+          <h3>Winter Swans</h3>
+          <ul>
+            <li style="margin-bottom: 10px">
+              <a href="../../learn-folders/neutral-tones/neutral_tones.html"
+                >Winter Swans</a
               >
             </li>
           </ul>
