--- a/english-literature/poems/love-and-relationships/learn-folders/past-paper-questions/aqa_past_paper_questions.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/past-paper-questions/aqa_past_paper_questions.html
@@ -451,6 +451,15 @@
             </li>
           </ul>
           <div class="separator"></div>
+          <h3>Winter Swans</h3>
+          <ul>
+            <li style="margin-bottom: 10px">
+              <a href="../../learn-folders/neutral-tones/neutral_tones.html"
+                >Winter Swans</a
+              >
+            </li>
+          </ul>
+          <div class="separator"></div>
           <h3>Singh Song</h3>
           <ul>
             <li style="margin-bottom: 10px">
