--- a/english-literature/poems/love-and-relationships/learn-folders/sonnet29-i-think-of-thee/sonnet29_i_think_of_thee.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/sonnet29-i-think-of-thee/sonnet29_i_think_of_thee.html
@@ -489,9 +489,20 @@
             </li>
           </ul>
           <div class="separator"></div>
-          <h3>Sonnet 29: I think of thee</h3>
+          <h3>Porphyria's Lover</h3>
           <ul>
             <li style="margin-bottom: 10px">
+              <a
+                href="../../learn-folders/porphyrias-lover/porphyrias_lover.html"
+                >Porphyria's Lover</a
+              >
+            </li>
+          </ul>
+          <div class="separator"></div>
+          <div class="separator"></div>
+          <h3>Sonnet 29: I think of thee</h3>
+          <ul>
+            <li class="ticklist">
               <a
                 href="../../learn-folders/sonnet29-i-think-of-thee/sonnet29_i_think_of_thee.html"
                 >Sonnet 29: I think of thee</a
