--- a/english-literature/poems/love-and-relationships/learn-folders/the-farmers-bride/the_farmers_bride.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/the-farmers-bride/the_farmers_bride.html
@@ -481,7 +481,7 @@
           <div class="separator"></div>
           <h3>The Farmer's Bride</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/the-farmers-bride/the_farmers_bride.html"
                 >The Farmer's Bride</a
