--- a/english-literature/poems/love-and-relationships/learn-folders/when-we-two-parted/when_we_two_parted.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/when-we-two-parted/when_we_two_parted.html
@@ -434,7 +434,7 @@
           <div class="separator"></div>
           <h3>When We Two Parted</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/when-we-two-parted/when_we_two_parted.html"
                 >When We Two Parted</a
@@ -454,7 +454,7 @@
           <h3>Winter Swans</h3>
           <ul>
             <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/neutral-tones/neutral_tones.html"
+              <a href="../../learn-folders/winter-swans/winter_swans.html"
                 >Winter Swans</a
               >
             </li>
@@ -488,6 +488,17 @@
               >
             </li>
           </ul>
+          <div class="separator"></div>
+          <h3>Porphyria's Lover</h3>
+          <ul>
+            <li style="margin-bottom: 10px">
+              <a
+                href="../../learn-folders/porphyrias-lover/porphyrias_lover.html"
+                >Porphyria's Lover</a
+              >
+            </li>
+          </ul>
+          <div class="separator"></div>
           <div class="separator"></div>
           <h3>Sonnet 29: I think of thee</h3>
           <ul>
