--- a/english-literature/poems/love-and-relationships/learn-folders/walking-away/walking_away.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/walking-away/walking_away.html
@@ -489,6 +489,17 @@
             </li>
           </ul>
           <div class="separator"></div>
+          <h3>Porphyria's Lover</h3>
+          <ul>
+            <li style="margin-bottom: 10px">
+              <a
+                href="../../learn-folders/porphyrias-lover/porphyrias_lover.html"
+                >Porphyria's Lover</a
+              >
+            </li>
+          </ul>
+          <div class="separator"></div>
+          <div class="separator"></div>
           <h3>Sonnet 29: I think of thee</h3>
           <ul>
             <li style="margin-bottom: 10px">
@@ -501,7 +512,7 @@
           <div class="separator"></div>
           <h3>Walking Away</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../../learn-folders/walking-away/walking_away.html"
                 >Walking Away</a
               >
