--- a/english-literature/poems/love-and-relationships/learn-folders/winter-swans/winter_swans.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/winter-swans/winter_swans.html
@@ -453,16 +453,7 @@
           <div class="separator"></div>
           <h3>Winter Swans</h3>
           <ul>
-            <li style="margin-bottom: 10px">
-              <a href="../../learn-folders/winter-swans/winter_swans.html"
-                >Winter Swans</a
-              >
-            </li>
-          </ul>
-          <div class="separator"></div>
-          <h3>Winter Swans</h3>
-          <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../../learn-folders/winter-swans/winter_swans.html"
                 >Winter Swans</a
               >
@@ -497,6 +488,17 @@
               >
             </li>
           </ul>
+          <div class="separator"></div>
+          <h3>Porphyria's Lover</h3>
+          <ul>
+            <li style="margin-bottom: 10px">
+              <a
+                href="../../learn-folders/porphyrias-lover/porphyrias_lover.html"
+                >Porphyria's Lover</a
+              >
+            </li>
+          </ul>
+          <div class="separator"></div>
           <div class="separator"></div>
           <h3>Sonnet 29: I think of thee</h3>
           <ul>
