--- a/english-literature/poems/love-and-relationships/learn-folders/before-you-were-mine/before_you_were_mine.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/before-you-were-mine/before_you_were_mine.html
@@ -557,7 +557,7 @@
           <div class="separator"></div>
           <h3>Before You Were Mine</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/before-you-were-mine/before_you_were_mine.html"
                 >Before You Were Mine</a
