--- a/english-literature/poems/love-and-relationships/learn-folders/climbing-my-grandfather/climbing_my_grandfather.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/climbing-my-grandfather/climbing_my_grandfather.html
@@ -538,7 +538,7 @@
           <div class="separator"></div>
           <h3>Climnbingn ny GRadnfatehr</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/climbing-my-grandfather/climbing_my_grandfather.html"
                 >clim</a
