--- a/english-literature/poems/love-and-relationships/learn-folders/eden-rock/eden_rock.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/eden-rock/eden_rock.html
@@ -548,7 +548,7 @@
           <div class="separator"></div>
           <h3>Eden Rock</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../../learn-folders/eden-rock/eden_rock.html"
                 >Eden Rock</a
               >
