--- a/english-literature/poems/love-and-relationships/learn-folders/essay-plans/obsession_essay_plan.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/essay-plans/obsession_essay_plan.html
@@ -578,7 +578,7 @@
           <div class="separator"></div>
           <h3>Essay Plans</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/essay-plans/obsession_essay_plan.html"
                 >Obsession Essay Plan</a
