--- a/english-literature/poems/love-and-relationships/learn-folders/essay-plans/relationships_breaking_down_essay_plan.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/essay-plans/relationships_breaking_down_essay_plan.html
@@ -584,7 +584,7 @@
                 >Obsession Essay Plan</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/essay-plans/relationships_breaking_down_essay_plan.html"
                 >Relationships breaking down essay plan</a
