--- a/english-literature/poems/love-and-relationships/learn-folders/follower/follower.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/follower/follower.html
@@ -521,7 +521,7 @@
           <div class="separator"></div>
           <h3>Follower</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../../learn-folders/follower/follower.html">Follower</a>
             </li>
           </ul>
