--- a/english-literature/poems/love-and-relationships/learn-folders/grade-9-essays/family_relationships_in_walking_away_and_one_other_poem.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/grade-9-essays/family_relationships_in_walking_away_and_one_other_poem.html
@@ -604,7 +604,7 @@
           <div class="separator"></div>
           <h3>Grade 9 Essays</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/grade-9-essays/family_relationships_in_walking_away_and_one_other_poem.html"
                 >Family relationships in Walking Away and one other poem</a
