--- a/english-literature/poems/love-and-relationships/learn-folders/grade-9-essays/poets_present_romantic_love_in_singh_song_and_one_other_poem.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/grade-9-essays/poets_present_romantic_love_in_singh_song_and_one_other_poem.html
@@ -610,7 +610,7 @@
                 >Family relationships in Walking Away and one other poem</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/grade-9-essays/poets_present_romantic_love_in_singh_song_and_one_other_poem.html"
                 >Poets present romantic love in Singh Song and one other poem</a
