--- a/english-literature/poems/love-and-relationships/learn-folders/key-themes/key_themes_pt1.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/key-themes/key_themes_pt1.html
@@ -415,7 +415,7 @@
           <div class="separator"></div>
           <h3>Key Themes</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../../learn-folders/key-themes/key_themes_pt1.html"
                 >Key Themes pt.1</a
               >
