--- a/english-literature/poems/love-and-relationships/learn-folders/key-themes/key_themes_pt2.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/key-themes/key_themes_pt2.html
@@ -420,7 +420,7 @@
                 >Key Themes pt.1</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../../learn-folders/key-themes/key_themes_pt2.html"
                 >Key Themes pt.2</a
               >
