--- a/english-literature/poems/love-and-relationships/learn-folders/key-themes/key_themes_pt3.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/key-themes/key_themes_pt3.html
@@ -425,7 +425,7 @@
                 >Key Themes pt.2</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../../learn-folders/key-themes/key_themes_pt3.html"
                 >Key Themes pt.3</a
               >
