--- a/english-literature/poems/love-and-relationships/learn-folders/learn-love/learn.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/learn-love/learn.html
@@ -394,7 +394,7 @@
               >Write Up Full Essay 2</a
             >
           </li>
-          <li style="margin-bottom: 10px">
+          <li class="ticklist">
             <a href="../../learn-folders/learn-love/learn.html">Learn</a>
           </li>
           <div class="separator"></div>
