--- a/english-literature/poems/love-and-relationships/learn-folders/loves-philosophy/loves_philosophy.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/loves-philosophy/loves_philosophy.html
@@ -471,7 +471,7 @@
           <div class="separator"></div>
           <h3>Love's Philosophy</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/loves-philosophy/loves_philosophy.html"
                 >Love's Philosophy</a
