--- a/english-literature/poems/love-and-relationships/learn-folders/mother-any-distance/mother_any_distance.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/mother-any-distance/mother_any_distance.html
@@ -528,7 +528,7 @@
           <div class="separator"></div>
           <h3>Mother, Any Distance</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/mother-any-distance/mother_any_distance.html"
                 >Mother, Any Distance</a
