--- a/english-literature/poems/love-and-relationships/learn-folders/neutral-tones/neutral_tones.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/neutral-tones/neutral_tones.html
@@ -444,7 +444,7 @@
           <div class="separator"></div>
           <h3>Neutral Tones</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../../learn-folders/neutral-tones/neutral_tones.html"
                 >Neutral Tones</a
               >
