--- a/english-literature/poems/love-and-relationships/learn-folders/notes/poetic_paragraph_structure.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/notes/poetic_paragraph_structure.html
@@ -400,7 +400,7 @@
           <div class="separator"></div>
           <h3>Notes</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/notes/poetic_paragraph_structure.html"
                 >Poetic Paragraph Structure</a
