--- a/english-literature/poems/love-and-relationships/learn-folders/notes/poetic_techniques.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/notes/poetic_techniques.html
@@ -406,7 +406,7 @@
                 >Poetic Paragraph Structure</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a href="../../learn-folders/notes/poetic_techniques.html"
                 >Poetic Techniques</a
               >
