--- a/english-literature/poems/love-and-relationships/learn-folders/past-paper-questions/aqa_past_paper_questions.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/past-paper-questions/aqa_past_paper_questions.html
@@ -594,7 +594,7 @@
           <div class="separator"></div>
           <h3>Past Paper Questions</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/past-paper-questions/aqa_past_paper_questions.html"
                 >AQA Past Paper Questions</a
