--- a/english-literature/poems/love-and-relationships/learn-folders/porphyrias-lover/porphyrias_lover.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/porphyrias-lover/porphyrias_lover.html
@@ -491,7 +491,7 @@
           <div class="separator"></div>
           <h3>Porphyria's Lover</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/porphyrias-lover/porphyrias_lover.html"
                 >Porphyria's Lover</a
