--- a/english-literature/poems/love-and-relationships/learn-folders/essay-plans/relationships_breaking_down_essay_plan.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/essay-plans/relationships_breaking_down_essay_plan.html
@@ -619,7 +619,7 @@
           </ul>
         </div>
         <div class="main-content">
-          <div class="video-container">
+          <!-- <div class="video-container">
             <iframe
               src="https://www.youtube-nocookie.com/embed/"
               frameborder="0"
@@ -627,14 +627,14 @@
               loading="lazy"
               allowfullscreen
             ></iframe>
-          </div>
+          </div> -->
           <button class="button-purple" id="open-pdf-button">
             Open PDF in New Tab
           </button>
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../love-and-relationships-pdfs/"
+              src="../../love-and-relationships-pdfs/essay-plan-relationships-breaking-down.pdf"
               width="100%"
               height="500px"
               type="application/pdf"
@@ -646,7 +646,8 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../love-and-relationships-pdfs/";
+      const pdfUrl =
+        "../../love-and-relationships-pdfs/essay-plan-relationships-breaking-down.pdf";
       document.getElementById("pdf-embed").src = pdfUrl;
       document
         .getElementById("open-pdf-button")
