--- a/english-literature/poems/love-and-relationships/learn-folders/past-paper-questions/aqa_past_paper_questions.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/past-paper-questions/aqa_past_paper_questions.html
@@ -619,7 +619,7 @@
           </ul>
         </div>
         <div class="main-content">
-          <div class="video-container">
+          <!-- <div class="video-container">
             <iframe
               src="https://www.youtube-nocookie.com/embed/"
               frameborder="0"
@@ -627,19 +627,33 @@
               loading="lazy"
               allowfullscreen
             ></iframe>
-          </div>
+          </div> -->
           <button class="button-purple" id="open-pdf-button">
             Open PDF in New Tab
           </button>
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../love-and-relationships-pdfs/"
+              src="../../love-and-relationships-pdfs/were not allowed.pdf"
               width="100%"
               height="500px"
               type="application/pdf"
             />
           </div>
+          <li>
+            <a
+              href="https://filestore.aqa.org.uk/sample-papers-and-mark-schemes/2022/june/AQA-87021P-QP-JUN22-CR.PDF"
+              >Question paper: Paper 1P Poetry anthology - June 2022</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://filestore.aqa.org.uk/sample-papers-and-mark-schemes/2021/november/AQA-87021P-QP-NOV21.PDF"
+              >Question paper: Paper 1P Poetry anthology - November 2021</a
+            >
+          </li>
+          <h3>The mark schemes for these are missing</h3>
+          <img src="image.png" width="840px" height="460px" />
         </div>
       </div>
     </div>
