--- a/english-literature/poems/love-and-relationships/learn-folders/porphyrias-lover/porphyrias_lover.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/porphyrias-lover/porphyrias_lover.html
@@ -638,13 +638,14 @@
               allowfullscreen
             ></iframe>
           </div>
+          <!-- JEZLER FIX -->
           <button class="button-purple" id="open-pdf-button">
             Open PDF in New Tab
           </button>
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../love-and-relationships-pdfs/"
+              src="../../love-and-relationships-pdfs/porphyrias-lover.pdf"
               width="100%"
               height="500px"
               type="application/pdf"
@@ -656,7 +657,7 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../love-and-relationships-pdfs/";
+      const pdfUrl = "../../love-and-relationships-pdfs/porphyrias-lover.pdf";
       document.getElementById("pdf-embed").src = pdfUrl;
       document
         .getElementById("open-pdf-button")
