--- a/english-literature/poems/love-and-relationships/learn-folders/sonnet29-i-think-of-thee/sonnet29_i_think_of_thee.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/sonnet29-i-think-of-thee/sonnet29_i_think_of_thee.html
@@ -627,13 +627,14 @@
               allowfullscreen
             ></iframe>
           </div>
+          <!-- JEZLER FIX -->
           <button class="button-purple" id="open-pdf-button">
             Open PDF in New Tab
           </button>
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../love-and-relationships-pdfs/"
+              src="../../love-and-relationships-pdfs/sonnet29-i-think-of-thee.pdf"
               width="100%"
               height="500px"
               type="application/pdf"
@@ -645,7 +646,8 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../love-and-relationships-pdfs/";
+      const pdfUrl =
+        "../../love-and-relationships-pdfs/sonnet29-i-think-of-thee.pdf";
       document.getElementById("pdf-embed").src = pdfUrl;
       document
         .getElementById("open-pdf-button")
