--- a/english-literature/poems/love-and-relationships/learn-folders/the-farmers-bride/the_farmers_bride.html
+++ b/english-literature/poems/love-and-relationships/learn-folders/the-farmers-bride/the_farmers_bride.html
@@ -617,13 +617,14 @@
               allowfullscreen
             ></iframe>
           </div>
+          <!-- JEZLER FIX -->
           <button class="button-purple" id="open-pdf-button">
             Open PDF in New Tab
           </button>
           <div class="pdf-preview">
             <embed
               id="pdf-embed"
-              src="../../love-and-relationships-pdfs/"
+              src="../../love-and-relationships-pdfs/the-farmers-bride.pdf"
               width="100%"
               height="500px"
               type="application/pdf"
@@ -635,7 +636,7 @@
     <script>
       //////////////////////////////////////////////////////////////////////////////////////////////////
       // pdf
-      const pdfUrl = "../../love-and-relationships-pdfs/";
+      const pdfUrl = "../../love-and-relationships-pdfs/the-farmers-bride.pdf";
       document.getElementById("pdf-embed").src = pdfUrl;
       document
         .getElementById("open-pdf-button")
