revision pdfs linked up

--- a/revision/learn-folders/how-to-make-notes/how_to_make_notes_for_language_papers.html
+++ b/revision/learn-folders/how-to-make-notes/how_to_make_notes_for_language_papers.html
@@ -391,7 +391,7 @@
                 >How To Make Notes For Shakesphear's Plays</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/how-to-make-notes/how_to_make_notes_for_language_papers.html"
                 >How To Make Notes For Language Papers</a
@@ -438,7 +438,7 @@
             <li style="margin-bottom: 10px">
               <a
                 href="../../learn-folders/printable-revision-sheets/an_inspector_calls.html"
-                >And Inspector Calls</a
+                >An Inspector Calls</a
               >
             </li>
             <li style="margin-bottom: 10px">
