--- a/revision/learn-folders/how-to-make-notes/how_to_use_this_section.html
+++ b/revision/learn-folders/how-to-make-notes/how_to_use_this_section.html
@@ -373,7 +373,7 @@
           <div class="separator"></div>
           <h3>How To Make Notes</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/how-to-make-notes/how_to_use_this_section.html"
                 >How To Use This Section</a
@@ -438,7 +438,7 @@
             <li style="margin-bottom: 10px">
               <a
                 href="../../learn-folders/printable-revision-sheets/an_inspector_calls.html"
-                >And Inspector Calls</a
+                >An Inspector Calls</a
               >
             </li>
             <li style="margin-bottom: 10px">
