--- a/revision/learn-folders/printable-revision-sheets/an_inspector_calls.html
+++ b/revision/learn-folders/printable-revision-sheets/an_inspector_calls.html
@@ -435,10 +435,10 @@
                 >Love + Relationship Poetry</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/printable-revision-sheets/an_inspector_calls.html"
-                >And Inspector Calls</a
+                >An Inspector Calls</a
               >
             </li>
             <li style="margin-bottom: 10px">
