--- a/revision/learn-folders/printable-revision-sheets/love_and_relationship_poetry.html
+++ b/revision/learn-folders/printable-revision-sheets/love_and_relationship_poetry.html
@@ -429,7 +429,7 @@
           <div class="separator"></div>
           <h3>Printable Revision Sheets</h3>
           <ul>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/printable-revision-sheets/love_and_relationship_poetry.html"
                 >Love + Relationship Poetry</a
@@ -438,7 +438,7 @@
             <li style="margin-bottom: 10px">
               <a
                 href="../../learn-folders/printable-revision-sheets/an_inspector_calls.html"
-                >And Inspector Calls</a
+                >An Inspector Calls</a
               >
             </li>
             <li style="margin-bottom: 10px">
