--- a/revision/learn-folders/printable-revision-sheets/romeo_and_juliet.html
+++ b/revision/learn-folders/printable-revision-sheets/romeo_and_juliet.html
@@ -438,7 +438,7 @@
             <li style="margin-bottom: 10px">
               <a
                 href="../../learn-folders/printable-revision-sheets/an_inspector_calls.html"
-                >And Inspector Calls</a
+                >An Inspector Calls</a
               >
             </li>
             <li style="margin-bottom: 10px">
@@ -447,7 +447,7 @@
                 >A Christmas Charol</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/printable-revision-sheets/romeo_and_juliet.html"
                 >Romeo And Juliet</a
