--- a/revision/learn-folders/how-to-revise-your-notes/the_lightup_method.html
+++ b/revision/learn-folders/how-to-revise-your-notes/the_lightup_method.html
@@ -407,7 +407,7 @@
                 >How To Use This Section</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/how-to-revise-your-notes/the_lightup_method.html"
                 >The Lightup Method</a
@@ -438,7 +438,7 @@
             <li style="margin-bottom: 10px">
               <a
                 href="../../learn-folders/printable-revision-sheets/an_inspector_calls.html"
-                >And Inspector Calls</a
+                >An Inspector Calls</a
               >
             </li>
             <li style="margin-bottom: 10px">
