--- a/revision/learn-folders/printable-revision-sheets/a_christmas_carol.html
+++ b/revision/learn-folders/printable-revision-sheets/a_christmas_carol.html
@@ -438,10 +438,10 @@
             <li style="margin-bottom: 10px">
               <a
                 href="../../learn-folders/printable-revision-sheets/an_inspector_calls.html"
-                >And Inspector Calls</a
+                >An Inspector Calls</a
               >
             </li>
-            <li style="margin-bottom: 10px">
+            <li class="ticklist">
               <a
                 href="../../learn-folders/printable-revision-sheets/a_christmas_carol.html"
                 >A Christmas Charol</a
