--- a/english-language/paper-two/index.html
+++ b/english-language/paper-two/index.html
@@ -612,12 +612,232 @@
         <div class="quiz-panel">
           <ul class="quiz-list">
             <!-- start quiz -->
-            <div>"JEZLER FIX"</div>
+            <h2>These Quizzes Are Unlikely To Be Done</h2>
+            <li>
+              Question 1 Quiz
+              <button class="start-learning" data-quiz="question-1">
+                Start Quiz
+              </button>
+            </li>
+            <li>
+              Question 2 Quiz
+              <button class="start-learning" data-quiz="question-2">
+                Start Quiz
+              </button>
+            </li>
+            <li>
+              Question 3 Quiz
+              <button class="start-learning" data-quiz="question-3">
+                Start Quiz
+              </button>
+            </li>
+            <li>
+              Question 4 Quiz
+              <button class="start-learning" data-quiz="question-4">
+                Start Quiz
+              </button>
+            </li>
+            <li>
+              Question 5 Quiz
+              <button class="start-learning" data-quiz="question-5">
+                Start Quiz
+              </button>
+            </li>
             <!-- end quiz -->
           </ul>
         </div>
       </div>
     </div>
+    <div id="quiz-overlay" class="quiz-overlay">
+      <div class="quiz-modal">
+        <button class="close-btn" onclick="closeQuiz()">×</button>
+        <h1 id="quiz-title"></h1>
+        <h4 id="question-number"></h4>
+        <div id="quiz-question"></div>
+        <div class="divider"></div>
+        <ul id="quiz-options"></ul>
+        <div class="quiz-buttons">
+          <button class="prev-btn" id="prev-btn" onclick="previousQuestion()">
+            Previous Question
+          </button>
+          <button class="next-btn" id="next-btn" onclick="nextQuestion()">
+            Next Question
+          </button>
+        </div>
+      </div>
+    </div>
+    <!-- start script -->
+    <script>
+      const quizzes = {
+        "quiz-id1": {
+          title: "Title",
+          questions: [
+            {
+              question: "question",
+              options: ["remove", "remove", "remove", "remove"],
+              correctAnswer: "answer",
+              explanation: "explaination",
+            },
+          ],
+        },
+        "quiz-id2": {
+          title: "Title",
+          questions: [
+            {
+              question: "question",
+              options: ["remove", "remove", "remove", "remove"],
+              correctAnswer: "answer",
+              explanation: "explaination",
+            },
+          ],
+        },
+      };
+
+      let currentQuizId = "";
+      let currentQuestionIndex = 0;
+      let userAnswers = [];
+
+      function startQuiz(quizId) {
+        currentQuizId = quizId;
+        currentQuestionIndex = 0;
+        userAnswers = new Array(quizzes[quizId].questions.length).fill(null);
+
+        const quiz = quizzes[quizId];
+        document.getElementById("quiz-title").textContent = quiz.title;
+        showQuestion();
+        document.getElementById("quiz-overlay").style.display = "flex";
+      }
+
+      function showQuestion() {
+        const quiz = quizzes[currentQuizId];
+        const currentQuestion = quiz.questions[currentQuestionIndex];
+
+        document.getElementById("question-number").textContent = `${
+          currentQuestionIndex + 1
+        } of ${quiz.questions.length} Questions`;
+        document.getElementById("quiz-question").textContent =
+          currentQuestion.question;
+
+        const optionsContainer = document.getElementById("quiz-options");
+        optionsContainer.innerHTML = "";
+
+        currentQuestion.options.forEach((option, index) => {
+          const optionLi = document.createElement("li");
+          optionLi.classList.add("option");
+          optionLi.textContent = option;
+          optionLi.onclick = () => selectAnswer(index);
+          optionsContainer.appendChild(optionLi);
+        });
+
+        document.getElementById("prev-btn").disabled =
+          currentQuestionIndex === 0;
+        document.getElementById("next-btn").textContent =
+          currentQuestionIndex === quiz.questions.length - 1
+            ? "Finish Quiz"
+            : "Next Question";
+        document.getElementById("next-btn").onclick =
+          currentQuestionIndex === quiz.questions.length - 1
+            ? checkAnswers
+            : nextQuestion;
+
+        // previous answer if exists
+        if (userAnswers[currentQuestionIndex] !== null) {
+          const selectedOption =
+            document.querySelectorAll(".option")[
+              userAnswers[currentQuestionIndex]
+            ];
+          selectAnswer(userAnswers[currentQuestionIndex], false);
+        }
+      }
+
+      function selectAnswer(index, isNewSelection = true) {
+        const quiz = quizzes[currentQuizId];
+        const currentQuestion = quiz.questions[currentQuestionIndex];
+        const selectedOption = document.querySelectorAll(".option")[index];
+        const correctOptionIndex = currentQuestion.options.indexOf(
+          currentQuestion.correctAnswer
+        );
+        const correctOption =
+          document.querySelectorAll(".option")[correctOptionIndex];
+
+        // rm any previous selections
+        document.querySelectorAll(".option").forEach((option) => {
+          option.classList.remove("selected", "correct");
+          const explanation = option.querySelector(".explanation");
+          if (explanation) explanation.remove();
+        });
+
+        if (index === correctOptionIndex) {
+          selectedOption.classList.add("correct");
+        } else {
+          selectedOption.classList.add("selected");
+          correctOption.classList.add("correct");
+        }
+
+        // explanation to correct answer
+        const explanationDiv = document.createElement("div");
+        explanationDiv.classList.add("explanation");
+        explanationDiv.textContent = `Reason: ${currentQuestion.explanation}`;
+        correctOption.appendChild(explanationDiv);
+
+        // disable further selections
+        document.querySelectorAll(".option").forEach((option) => {
+          option.onclick = null;
+        });
+
+        if (isNewSelection) {
+          userAnswers[currentQuestionIndex] = index;
+        }
+      }
+
+      function nextQuestion() {
+        if (
+          currentQuestionIndex <
+          quizzes[currentQuizId].questions.length - 1
+        ) {
+          currentQuestionIndex++;
+          showQuestion();
+        }
+      }
+
+      function previousQuestion() {
+        if (currentQuestionIndex > 0) {
+          currentQuestionIndex--;
+          showQuestion();
+        }
+      }
+
+      function checkAnswers() {
+        const quiz = quizzes[currentQuizId];
+        let score = 0;
+
+        userAnswers.forEach((answer, index) => {
+          if (
+            answer !== null &&
+            quiz.questions[index].options[answer] ===
+              quiz.questions[index].correctAnswer
+          ) {
+            score++;
+          }
+        });
+
+        alert(`You scored ${score} out of ${quiz.questions.length}`);
+        closeQuiz();
+      }
+
+      function closeQuiz() {
+        document.getElementById("quiz-overlay").style.display = "none";
+      }
+
+      // quiz buttons event listeners
+      document.querySelectorAll(".start-learning").forEach((button) => {
+        button.addEventListener("click", function () {
+          const quizId = this.getAttribute("data-quiz");
+          startQuiz(quizId);
+        });
+      });
+    </script>
+
     <!-- start script -->
     <script>
       // open sections
